test/opa/opa-fixtures/accepted/deployment-valid.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: goproxy
  namespace: opa-test-qa
  labels:
    app: goproxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goproxy
  template:
    metadata:
      labels:
        app: goproxy
    spec:
      containers:
      - name: goproxy
        image: k8s.gcr.io/goproxy:0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "15Mi"
            cpu: "15m" 
          requests:
            memory: "10Mi"
            cpu: "10m"
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
