test/opa/opa-fixtures/accepted/namespace-valid.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superolo-world-good
  labels:
    company: DISCOVERY-VITALITY
    service: Disc-Vitality-Batch-Services
    environment: Dev
